--- a/style.css
+++ b/style.css
@@ -156,19 +156,39 @@ body {
     color: var(--cor-de-fundo);
 }
 
-@media (max-width: 1300px) {
-    .principal{  
-        width: 100%;
-        background-image: url("assets/img/Background2.png");
-        display: flex;
-        justify-content: center;
-        
-    }
-    .container__caixa{
-        width: 100%;
-        height: auto;
+@media screen and (max-width: 768px) {
+    .container{
+        display: block;
         background-image: none;
-        margin: 375px 100px;
+        background-image: url(assets/img/Background2.png);
+        height: auto;
+        padding: 10px 0 10px 0;
     }
     
+    .container__imagem{
+        width: 50vw;
+        margin-top: 205px;
+    }
+
+    .container__caixa{
+        margin: 2em 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+        background-image: none;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    .dispositivos__lista{
+        display: block;
+    }
+    
+    .rodape__lista{
+        display: block;
+    }
 }
